# assignment_misogi

./: README.md
Week3/Day3/q1/: README.md  ineferance_calculator.py  research_analysis.md  sceniro_analysis.md
Week3/Day3/q2/: README.md
Week3/Day3/q2/backend/: agents_db.json  app.py  recommendation_engine.py
Week3/Day3/q2/frontend/src/: AgentRecommender.jsx  main.jsx
Week3/Day3/q3/: README.md
Week3/Day3/q3/backend/: app.py  tool_analysis.json
Week4/Day1/q1/: README.md
Week4/Day1/q1/backend/: llm_utils.py  main.py
Week4/Day1/q1/frontend/: index.html  package-lock.json
Week4/Day1/q2/: .gitignore  PRD.md  README.md
Week4/Day1/q2/backend/: database.py  main.py  mock_data.json  models.py  requirements.txt  schemas.py  security.py
Week4/Day1/q2/frontend/: package-lock.json  package.json
Week4/Day2/q1/: .env  README.md  doc_data.json  env_template.txt  main.py  requirements.txt
Week4/Day2/q2/: .gitignore  README.md  pyproject.toml
Week4/Day2/q2/data/: sample_content.json
Week4/Day2/q2/src/: server.py
Week4/Day3/q1/: .env  README.md  main.py  pyproject.toml
Week4/Day3/q1/src/: server.py
Week4/Day3/q2/: .gitignore  README.md
Week4/Day3/q2/backend/: main.py  requirements.txt  similarity_analyzer.py
Week4/Day3/q2/frontend/: index.html  package.json
Week4/Day3/q3/: README.md  app.py  demo.py  requirements.txt
Week4/Day3/q3/strategies/: __init__.py  fixed_length.py  paragraph_based.py  semantic_chunking.py  sentence_based.py  sliding_window.py
Week4/Day3/q3/utils/: __init__.py  pdf_processor.py  tokenizer.py  visualizations.py
(+24 files in other folders)
