[project]
name = "smart-meeting-assistant"
version = "0.1.0"
description = "Smart Meeting Assistant with AI Scheduling using Gemini AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.3",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "python-dateutil>=2.9.0",
    "pytest>=8.3.3",
    "fastmcp>=2.10.1",
]
