[project]
name = "discord-mcp-server"
version = "0.1.0"
description = "Discord MCP Server - Enable AI models to interact with Discord"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.1",
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.0",
]
